@@ -4,18 +4,18 @@ import com.br.manager.domain.common.exception.BusinessException;
 import com.br.manager.domain.common.exception.NotFoundBusinessException;
 import com.br.manager.domain.operational.dto.TankInputDTO;
 import com.br.manager.domain.operational.dto.TankResponseDTO;
-import com.br.manager.domain.operational.entity.Fuel;
+import com.br.manager.domain.operational.entity.Product;
 import com.br.manager.domain.operational.entity.Tank;
-import com.br.manager.domain.operational.repository.TankRepository;
+import com.br.manager.domain.operational.enums.ProductTypeEnum;
 import com.br.manager.domain.operational.mapper.TankMapper;
-import io.micrometer.common.util.StringUtils;
+import com.br.manager.domain.operational.repository.TankRepository;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 public class TankService {
@@ -27,93 +27,98 @@ public class TankService {
     private TankMapper tankMapper;
 
     @Autowired
-    private FuelService fuelService;
+    private ProductService productService;
 
     public TankResponseDTO create(TankInputDTO inputDTO) {
         try {
-            Fuel fuel = fuelService.getFuelEntityById(inputDTO.getFuel());
-
-            Tank tank = tankMapper.tankInputToTankEntity(inputDTO);
-            tank.setFuel(fuel);
-            return tankMapper.tankEntityToTankResponseDTO(tankRepository.saveAndFlush(tank));
-
-        } catch (ConstraintViolationException constraintViolationException) {
-            List<String> validationError = constraintViolationException.getConstraintViolations().stream()
-                    .map(v -> v.getMessage().toString())
-                    .collect(Collectors.toList());
-            throw new BusinessException(validationError.toString());
-        } catch (BusinessException businessException) {
-            throw businessException;
-        } catch (Exception e) {
-            String name = "";
-            if (StringUtils.isNotBlank(inputDTO.getIdentity())) {
-                name = inputDTO.getIdentity();
+            Product product = productService.getProductEntityById(inputDTO.getProductId());
+            if (product.getProductType() != ProductTypeEnum.FUEL) {
+                throw new BusinessException("Only FUEL products can be assigned to a tank.");
             }
-            throw new BusinessException("Erro ao salvar tanque " + name, e);
+            Tank tank = tankMapper.tankInputToTankEntity(inputDTO);
+            if (tank.getId() == null) {
+                tank.setId(UUID.randomUUID());
+            }
+            return tankMapper.tankEntityToTankResponseDTO(tankRepository.saveAndFlush(tank));
+        } catch (ConstraintViolationException exception) {
+            throw new BusinessException(exception.getConstraintViolations().stream()
+                    .map(v -> v.getMessage())
+                    .toList()
+                    .toString());
+        } catch (Exception e) {
+            String tankCode = inputDTO != null && StringUtils.hasText(inputDTO.getCode()) ? inputDTO.getCode() : "";
+            throw new BusinessException("Error while saving tank " + tankCode, e);
         }
     }
 
     public TankResponseDTO update(TankInputDTO inputDTO) {
         try {
-            Tank tank = tankRepository.findByIdAndDeletedIsNull(inputDTO.getId());
-
+            Tank tank = tankRepository.findByIdAndActiveTrue(inputDTO.getId());
             if (tank == null) {
-                throw new NotFoundBusinessException(String.format("Tanque ID: %s não encontrado.", inputDTO.getId()));
+                throw new NotFoundBusinessException(String.format("Tank with ID %s not found", inputDTO.getId()));
             }
-
+            Product product = productService.getProductEntityById(inputDTO.getProductId());
+            if (product.getProductType() != ProductTypeEnum.FUEL) {
+                throw new BusinessException("Only FUEL products can be assigned to a tank.");
+            }
             tankMapper.updateTankFromDto(inputDTO, tank);
-            Fuel fuel = fuelService.getFuelEntityById(inputDTO.getFuel());
-            tank.setFuel(fuel);
-            Tank tankSave = tankRepository.saveAndFlush(tank);
-            return tankMapper.tankEntityToTankResponseDTO(tankSave);
-        } catch (ConstraintViolationException constraintViolationException) {
-            List<String> validationError = constraintViolationException.getConstraintViolations().stream()
-                    .map(v -> v.getMessage().toString())
-                    .collect(Collectors.toList());
-            throw new BusinessException(validationError.toString());
-        } catch (NotFoundBusinessException notFoundBusinessException) {
-            throw notFoundBusinessException;
+            return tankMapper.tankEntityToTankResponseDTO(tankRepository.saveAndFlush(tank));
+        } catch (ConstraintViolationException exception) {
+            throw new BusinessException(exception.getConstraintViolations().stream()
+                    .map(v -> v.getMessage())
+                    .toList()
+                    .toString());
+        } catch (NotFoundBusinessException exception) {
+            throw exception;
         } catch (Exception e) {
-            String fuelName = "";
-            if (StringUtils.isNotBlank(inputDTO.getIdentity())) {
-                fuelName = inputDTO.getIdentity();
-            }
-            throw new BusinessException("Erro ao salvar tanque " + fuelName, e);
+            String tankCode = inputDTO != null && StringUtils.hasText(inputDTO.getCode()) ? inputDTO.getCode() : "";
+            throw new BusinessException("Error while updating tank " + tankCode, e);
         }
     }
 
     public List<TankResponseDTO> findAll() {
-        return tankRepository.findAllByDeletedIsNull()
-                .stream()
-                .map(tankMapper::tankEntityToTankResponseDTO)
-                .collect(Collectors.toList());
+        return tankMapper.listTankEntityToListTankResponseDTO(tankRepository.findAllByActiveTrue());
     }
 
-    public TankResponseDTO find(Long id) {
-        Tank tank = tankRepository.findByIdAndDeletedIsNull(id);
-
-        if (tank == null) {
-            throw new NotFoundBusinessException(String.format("Tanque com ID:%s não localizado.", id));
+    public List<TankResponseDTO> findByDescription(String description) {
+        if (!StringUtils.hasText(description)) {
+            return findAll();
         }
+        return tankMapper.listTankEntityToListTankResponseDTO(
+                tankRepository.findByCodeContainingIgnoreCaseAndActiveTrue(description));
+    }
 
+    public TankResponseDTO find(UUID id) {
+        Tank tank = tankRepository.findByIdAndActiveTrue(id);
+        if (tank == null) {
+            throw new NotFoundBusinessException(String.format("Tank with ID %s not found", id));
+        }
         return tankMapper.tankEntityToTankResponseDTO(tank);
     }
 
-    public void delete(Long id) {
+    public void delete(UUID id) {
         try {
-            Tank tank = tankRepository.findById(id).orElseThrow(() -> new NotFoundBusinessException(String.format("Tanque ID:%s não localizado para exclusão.", id)));
-            tank.setDeleted(LocalDateTime.now());
+            Tank tank = tankRepository.findById(id)
+                    .orElseThrow(() -> new NotFoundBusinessException(String.format("Tank with ID %s not found", id)));
+            tank.setActive(false);
             tankRepository.saveAndFlush(tank);
-        } catch (ConstraintViolationException constraintViolationException){
-            List<String> validationError = constraintViolationException.getConstraintViolations().stream()
-                    .map(v -> v.getMessage().toString())
-                    .collect(Collectors.toList());
-            throw new BusinessException(validationError.toString());
-        } catch (NotFoundBusinessException notFoundBusinessException){
-            throw notFoundBusinessException;
-        } catch (Exception e){
-            throw new BusinessException("Erro ao deletar tanque ", e);
+        } catch (ConstraintViolationException exception) {
+            throw new BusinessException(exception.getConstraintViolations().stream()
+                    .map(v -> v.getMessage())
+                    .toList()
+                    .toString());
+        } catch (NotFoundBusinessException exception) {
+            throw exception;
+        } catch (Exception e) {
+            throw new BusinessException("Error while deleting tank", e);
         }
     }
 
+    public Tank getTankEntityById(UUID id) {
+        Tank tank = tankRepository.findByIdAndActiveTrue(id);
+        if (tank == null) {
+            throw new NotFoundBusinessException(String.format("Tank with ID %s not found", id));
+        }
+        return tank;
+    }
 }
